testsuite/tests/properties/invalid_domain/with_node/test.lkt
from common import FooNode

class Example: FooNode implements TokenNode {
    fun get_var(): LogicVar = raise[LogicVar] PropertyError()
    fun get_domain(): Array[FooNode] = raise[Array[FooNode]] PropertyError()
    fun get_eq(): Equation = %domain(self.get_var(), node.get_domain())
}
